# gold-dashboard-arena

./: .firebaserc  .gitignore  AGENTS.md  README_DEPLOYMENT.md  activeContext.md  config.py  firebase.json  fix-stale-firebase-data-129d8f.md  generate_data.py  pyproject.toml  research.md  utils.py
.github/workflows/: update-dashboard.yml
data/: last_land_scrape.json
docs/: activeContext.md  research.md
plans/: ISSUE-4-gasoline-tracking.md
public/: app.js  index.html  styles.css
repositories/: crypto_repo.py  currency_repo.py  gold_repo.py  stock_repo.py
scripts/: analyze_html.py  debug_alternative_gold.py  debug_mihong.py
src/gold_dashboard/: __init__.py  config.py  dashboard.py  generate_data.py  main.py  models.py  utils.py
src/gold_dashboard/repositories/: __init__.py  base.py  crypto_repo.py  currency_repo.py  gasoline_repo.py  gold_repo.py  history_repo.py  land_repo.py  stock_repo.py
tests/: test_egcurrency_parse.py  test_gasoline_repo.py  test_generate_data.py  test_history.py  test_repositories.py  test_sjc_parse.py
